--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.10.8",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.2",
+    "firebase": "^8.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2"
