--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^9.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
